[gd_scene load_steps=36 format=3 uid="uid://cweoljrgl66pe"]

[ext_resource type="Script" uid="uid://biy2rt65uge2s" path="res://scenes/spawnManager.gd" id="1_se8ht"]
[ext_resource type="Script" uid="uid://bsmhqlrad0uxx" path="res://scenes/Camera3D.gd" id="2_bgx76"]
[ext_resource type="Script" uid="uid://br2olyoxkcqg6" path="res://scenes/Player.gd" id="4_h1abc"]
[ext_resource type="Texture2D" uid="uid://bcqho36ola7id" path="res://images/shadow.png" id="5_5c00h"]
[ext_resource type="Texture2D" uid="uid://bk7fya5asuuho" path="res://images/shield1.png" id="5_mfhfm"]
[ext_resource type="Script" uid="uid://ds3ltncg0xvwp" path="res://scenes/spriteController.gd" id="6_7q24k"]
[ext_resource type="PackedScene" uid="uid://na3q31b8orsx" path="res://models/bike.fbx" id="6_wblsv"]
[ext_resource type="Script" uid="uid://bl1owcw6htlt2" path="res://scenes/loseCheck.gd" id="6_yxfp1"]
[ext_resource type="Script" uid="uid://dswounr70amv2" path="res://scenes/collisionDetector.gd" id="7_hvvf1"]
[ext_resource type="Script" uid="uid://cf7finujuf4ie" path="res://scenes/UIcanvas.gd" id="8_s61oi"]
[ext_resource type="Script" uid="uid://yhuhcq28uwm" path="res://scenes/obstacleRedir.gd" id="9_apla3"]
[ext_resource type="Script" uid="uid://dslxh6a4sxj6u" path="res://scenes/Enemy.gd" id="9_rpaud"]
[ext_resource type="Script" uid="uid://ignrfijmmgtf" path="res://scenes/collCheck.gd" id="11_0lpph"]
[ext_resource type="PackedScene" uid="uid://c6jqbcmtlmrl5" path="res://Objs/windmill.tscn" id="13_vc0fv"]

[sub_resource type="Curve" id="Curve_gakv1"]
_data = [Vector2(0, 0), 0.0, 0.15522644, 0, 0, Vector2(1, 1), 1.9583703, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_367ev"]
curve = SubResource("Curve_gakv1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_a1hpv"]
emission_shape = 1
emission_sphere_radius = 0.5
direction = Vector3(0, 0, 0)
spread = 5.0
initial_velocity_min = 2.0
initial_velocity_max = 3.0
gravity = Vector3(0, 0, 0)
linear_accel_min = 10.0
linear_accel_max = 10.0
scale_curve = SubResource("CurveTexture_367ev")

[sub_resource type="ORMMaterial3D" id="ORMMaterial3D_5pcs1"]
transparency = 1
depth_draw_mode = 2
shading_mode = 0
albedo_color = Color(0.789469, 0.6114724, 0.45204264, 1)
albedo_texture = ExtResource("5_mfhfm")
albedo_texture_msdf = true
billboard_mode = 1

[sub_resource type="QuadMesh" id="QuadMesh_eylfd"]
material = SubResource("ORMMaterial3D_5pcs1")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_bties"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_p7sfm"]
height = 0.547368
radius = 0.322134

[sub_resource type="BoxShape3D" id="BoxShape3D_d2lqg"]
size = Vector3(1.93977, 2.04718, 0.458008)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_22om5"]
height = 2.89336

[sub_resource type="PlaneMesh" id="PlaneMesh_eh458"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nwxde"]
albedo_color = Color(0.980392, 0.811765, 0.537255, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_3qkgj"]

[sub_resource type="CylinderMesh" id="CylinderMesh_6mc82"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mk1b7"]
albedo_color = Color(1, 0.388235, 0.396078, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_wgjj6"]
height = 2.17712
radius = 0.478172

[sub_resource type="Gradient" id="Gradient_nagi3"]
colors = PackedColorArray(0, 0, 0, 0.188235, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6bm1o"]
gradient = SubResource("Gradient_nagi3")

[sub_resource type="Gradient" id="Gradient_fcja5"]
colors = PackedColorArray(0, 0, 0, 0.243137, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_q5xit"]
gradient = SubResource("Gradient_fcja5")

[sub_resource type="LabelSettings" id="LabelSettings_fuohi"]
font_size = 80
font_color = Color(1, 1, 1, 0.545098)

[sub_resource type="Environment" id="Environment_bqj0m"]
fog_enabled = true
fog_light_color = Color(0.298039, 0.443137, 0.933333, 1)
fog_light_energy = 2.27
fog_density = 0.0017
fog_sky_affect = 0.851
fog_height = 669.15
fog_height_density = -11.0891

[node name="Node3D" type="Node3D"]

[node name="spawnManager" type="Node3D" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("1_se8ht")
player = NodePath("../Player")
range = 260.0
meters = 0.07
speedCoef = 0.001

[node name="Player" type="Node3D" parent="." node_paths=PackedStringArray("bikeModel")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0420227, -1.17459, -5.38901)
script = ExtResource("4_h1abc")
vspeed = 140.0
hspeed = 40.0
interpolate = 1.0
lerpVSpeed = 1.1
bikeModel = NodePath("hoverModel")

[node name="shadow" type="Sprite3D" parent="Player"]
transform = Transform3D(0.682085, 0, 0, 0, -7.83872e-08, -0.993155, 0, 1.79329, -4.34122e-08, 0, -1.03693, 0.0782094)
modulate = Color(0, 0, 0, 0.74902)
texture = ExtResource("5_5c00h")

[node name="GPUParticles3D" type="GPUParticles3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.939721, -0.623073)
amount = 12
lifetime = 0.85
speed_scale = 2.0
local_coords = true
process_material = SubResource("ParticleProcessMaterial_a1hpv")
draw_pass_1 = SubResource("QuadMesh_eylfd")

[node name="shield" type="Sprite3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.76798)
modulate = Color(0, 0.913725, 0.741176, 0)
pixel_size = 0.004
texture = ExtResource("5_mfhfm")
script = ExtResource("6_7q24k")
time_change = 2.0
target_a = 180.0

[node name="hoverModel" type="Node3D" parent="Player"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player/hoverModel"]
transform = Transform3D(0.497527, 0, 0, 0, -0.35607, -0.347487, 0, 0.507087, -0.519612, 0, 0.544036, 0.542491)
visible = false
mesh = SubResource("CapsuleMesh_bties")
skeleton = NodePath("")

[node name="bike" parent="Player/hoverModel" instance=ExtResource("6_wblsv")]
transform = Transform3D(-2.2, 0, -3.32191e-07, 0, 2.2, 0, 3.32191e-07, 0, -2.2, 0, -0.401242, 0)

[node name="loseCheck" type="Area3D" parent="Player" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.043)
script = ExtResource("6_yxfp1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/loseCheck"]
transform = Transform3D(0.995054, 0, 0, 0, -4.34952e-08, -0.995054, 0, 0.995054, -4.34952e-08, 0, 0, 0.0889645)
shape = SubResource("CylinderShape3D_p7sfm")

[node name="collCheck" type="Area3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.633631)
script = ExtResource("7_hvvf1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/collCheck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.275386, 0)
shape = SubResource("BoxShape3D_d2lqg")

[node name="StaticBody3D" type="StaticBody3D" parent="Player" groups=["player"]]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Player/StaticBody3D"]
transform = Transform3D(0.995054, 0, 0, 0, -4.34952e-08, -0.995054, 0, 0.995054, -4.34952e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_22om5")

[node name="Camera3D" type="Camera3D" parent="Player" node_paths=PackedStringArray("player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0420227, 1.17459, 5.38901)
current = true
fov = 77.5518
near = 0.005
script = ExtResource("2_bgx76")
player = NodePath("..")
veloc = 75.0

[node name="plane" type="MeshInstance3D" parent="Player/Camera3D"]
transform = Transform3D(1471.9, 0, 0, 0, 1, 0, 0, 0, 443.235, 0, -2.29079, -387.232)
mesh = SubResource("PlaneMesh_eh458")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_nwxde")

[node name="sky" type="MeshInstance3D" parent="Player/Camera3D"]
transform = Transform3D(10000, 0, 0, 0, -0.000437114, -10000, 0, 10000, -0.000437114, 0, 0, -1637.19)
mesh = SubResource("PlaneMesh_3qkgj")

[node name="Enemy" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.711, -1.17459, -5.38901)
script = ExtResource("9_rpaud")
hspeed = 20.0

[node name="shadow" type="Sprite3D" parent="Enemy"]
transform = Transform3D(0.4474, 0, 0, 0, -7.06969e-08, -0.993155, 0, 1.61736, -4.34122e-08, 0, -1.03693, 0.0782094)
modulate = Color(0, 0, 0, 0.694118)
texture = ExtResource("5_5c00h")

[node name="hoverbike" type="MeshInstance3D" parent="Enemy"]
transform = Transform3D(0.995054, 0, 0, 0, -6.34725e-08, -0.995054, 0, 1.45208, -4.34952e-08, 0, 0, 0.0020113)
mesh = SubResource("CylinderMesh_6mc82")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_mk1b7")

[node name="Body" type="StaticBody3D" parent="Enemy" groups=["enemy", "obstacle"]]
script = ExtResource("9_apla3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemy/Body"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_wgjj6")

[node name="rayCenter" type="RayCast3D" parent="Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.58509)
target_position = Vector3(0, 0, -300)

[node name="rayCenter2" type="RayCast3D" parent="Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.764, 0, -1.585)
target_position = Vector3(0, 0, -300)

[node name="rayCenter3" type="RayCast3D" parent="Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.764401, 0, -1.585)
target_position = Vector3(0, 0, -300)

[node name="rayLeft" type="RayCast3D" parent="Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, -1.585)
target_position = Vector3(0, 0, -300)

[node name="rayLeft2" type="RayCast3D" parent="Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, -1.585)
target_position = Vector3(0, 0, -300)

[node name="rayRigth" type="RayCast3D" parent="Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0, -1.585)
target_position = Vector3(0, 0, -300)

[node name="rayRigth2" type="RayCast3D" parent="Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, -1.585)
target_position = Vector3(0, 0, -300)

[node name="collCheck" type="Area3D" parent="Enemy"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.634)
script = ExtResource("11_0lpph")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemy/collCheck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.275386, 0)
shape = SubResource("BoxShape3D_d2lqg")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.997927, 0.0170614, 0.0620496, -0.0643404, 0.245863, 0.967167, 0.00124551, -0.969154, 0.246451, 0, 2.00258, -0.058794)
light_energy = 0.8
directional_shadow_mode = 0
sky_mode = 1

[node name="UIcanvas" type="Node2D" parent="."]
script = ExtResource("8_s61oi")

[node name="izqButton" type="TouchScreenButton" parent="UIcanvas"]
position = Vector2(-1347, 0)
scale = Vector2(13.8906, 16.9844)
texture_normal = SubResource("GradientTexture2D_6bm1o")
texture_pressed = SubResource("GradientTexture2D_q5xit")
action = "izquierda"

[node name="derButton" type="TouchScreenButton" parent="UIcanvas"]
position = Vector2(1347, 1083)
rotation = -3.14159
scale = Vector2(13.8906, 16.9844)
texture_normal = SubResource("GradientTexture2D_6bm1o")
texture_pressed = SubResource("GradientTexture2D_q5xit")
action = "derecha"

[node name="Distance" type="Label" parent="UIcanvas"]
offset_left = -114.0
offset_top = 197.0
offset_right = 114.0
offset_bottom = 334.0
text = "0000"
label_settings = SubResource("LabelSettings_fuohi")
horizontal_alignment = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_bqj0m")

[node name="windmill" parent="." instance=ExtResource("13_vc0fv")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4.07731, -5.21617, -592.016)
